# gooroom-greeter

./: Makefile.am  README  autogen.sh  configure.ac
data/: 99_gooroom-greeter.conf  Makefile.am  gis-user-delete-script  gooroom-greeter.conf  gooroom-greeter.desktop
data/icons/: Makefile.am
data/images/: Makefile.am
data/theme/: theme.css
data/themes/: Makefile.am  gooroom-greeter.css
debian/: 60-gooroom-greeter.conf  changelog  control  copyright  gooroom-greeter.pkla  gooroom-greeter.postinst  gooroom-greeter.prerm  install  rules
po/: POTFILES.in  en_GB.po  ko.po
src/: Makefile.am  browser-killall  browser-pkexec  chromium-killall  chromium-pkexec  gooroom-greeter.c  gooroom-greeter.glade  gooroom-greeter.ui  greeter-message-dialog.c  greeter-message-dialog.h  greeter-message-dialog.ui  greeter-password-settings-dialog.c  greeter-password-settings-dialog.h  greeter-password-settings-dialog.ui  greeter-window.c  greeter-window.h  greeter-window.ui  greeterbackground.c  greeterbackground.h  greeterconfiguration.c  greeterconfiguration.h  gresource.xml  indicator-button.c  indicator-button.h  kr.gooroom.greeter.policy.in  splash-window.c  splash-window.h  splash-window.ui
