SUBDIRS = images

xgreetersdir = $(datadir)/xgreeters
dist_xgreeters_DATA = gooroom-greeter.desktop

libexec_SCRIPTS = \
	gis-user-delete-script

configdir = $(sysconfdir)/lightdm
dist_config_DATA = gooroom-greeter.conf

lightdm_confdir = $(datadir)/lightdm/lightdm.conf.d
lightdm_conf_DATA = \
	99_gooroom-greeter.conf
