imagesdir = $(datadir)/gooroom-greeter/images
images_DATA = \
	gooroom-greeter.png \
	password.png \
	shadow.png \
	username.png

desktop_basedir = $(datadir)/images/desktop-base
desktop_base_DATA = \
	gooroom-greeter-bg-01.jpg	\
	gooroom-greeter-bg-02.jpg	\
	gooroom-greeter-bg-03.png

EXTRA_DIST = $(images_DATA) $(desktop_base_DATA)
