imagesdir = $(pkgdatadir)/images
images_DATA = \
	gooroom-greeter.png \
	password.png \
	shadow.png \
	username.png \
	google.svg	\
	naver.png	\
	gooroom-logo.svg

desktop_basedir = $(datadir)/images/desktop-base
desktop_base_DATA = gooroom-greeter-bg.png

EXTRA_DIST = $(images_DATA) $(desktop_base_DATA)
